# SpeechTech-asr

./: .gitignore  README.md  pyproject.toml  requirements-rtx3090.txt  requirements.txt
configs/: hubert_finetune_10h.yaml  wav2vec2_discrete_k100_bilstm_ctc.yaml  wav2vec2_discrete_k200_bilstm_ctc.yaml  wav2vec2_discrete_k50_bilstm_ctc.yaml  wav2vec2_finetune_10h.yaml  wav2vec2_finetune_1h.yaml  wav2vec2_finetune_1h_time_mask.yaml  wav2vec2_finetune_3h.yaml  wav2vec2_frozen_10h.yaml  wav2vec2_frozen_bilstm_10h.yaml  wav2vec2_layer12_bilstm_ctc.yaml  wav2vec2_layer6_bilstm_ctc.yaml  wav2vec2_layer9_bilstm_ctc.yaml  wav2vec2_masking_finetune_10h.yaml  wav2vec2_top3_finetune_10h.yaml  wav2vec2_top6_finetune_10h.yaml  wavlm_finetune_10h.yaml
doc/: all_experiment_results_comprehensive_analysis.md  e1_e12_final_test_results_analysis.md  e1_e4_preliminary_results_analysis.md  followup_experiment_execution.md  ssl_asr_deep_dive_experiment_plan_for_codex.md  ssl_asr_remaining_gpu_training_plan.md  ssl_low_resource_asr_project_plan.md  ssl_representation_discrete_units_extension_plan.md  task_completion_record.md
results/: data_scale_frozen_vs_finetune.csv  deep_dive_error_analysis.md  deep_dive_error_stats.csv  deep_dive_metrics.csv  representation_test_metrics.csv  test_metrics.csv  wav2vec2_finetune_10h_overfit_validation_metrics.csv  wav2vec2_finetune_10h_startup_validation_metrics.csv  wav2vec2_finetune_1h_repaired_startup_validation_metrics.csv  wav2vec2_finetune_1h_startup_validation_metrics.csv  wav2vec2_finetune_overfit_diagnostic_ctc_sum_metrics.csv  (+2 more)
(+64 files in other folders)
